--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -53,5 +53,47 @@
     "description": "Price of an item",
     "type": "text",
     "placeholders": {}
+  },
+  "total": "Total",
+  "@total": {
+    "description": "Total",
+    "type": "text",
+    "placeholders": {}
+  },
+  "cart": "Cart",
+  "@cart": {
+    "description": "Title of cart page",
+    "type": "text",
+    "placeholders": {}
+  },
+  "cancel": "Cancel",
+  "@cancel": {
+    "description": "Cancel a dialog",
+    "type": "text",
+    "placeholders": {}
+  },
+  "ok": "Ok",
+  "@ok": {
+    "description": "Ok Dialog",
+    "type": "text",
+    "placeholders": {}
+  },
+  "finishOrderInfo": "Are you sure you want to place your order?",
+  "@finishOrderInfo": {
+    "description": "Bla bla",
+    "type": "text",
+    "placeholders": {}
+  },
+  "changeName": "Change name",
+  "@changeName": {
+    "description": "Name change dialog title",
+    "type": "text",
+    "placeholders": {}
+  },
+  "edit": "Edit",
+  "@edit": {
+    "description": "name change dialog",
+    "type": "text",
+    "placeholders": {}
   }
 }
